# UltraNode

./: CMakeLists.txt  README.md  scaffold.txt  sdkconfig  sdkconfig.old  uploadFirmware.sh
components/effects/: CMakeLists.txt  effects.c  effects.h
components/presence/: CMakeLists.txt  presence.c  presence.h
components/ws2812/: CMakeLists.txt  ws2812.c  ws2812.h
main/: CMakeLists.txt  Kconfig.projbuild  app_config.c  app_config.h  idf_component.yml  main.c  main.c.old  mqtt_ctrl.c  mqtt_ctrl.h  ota_update.c  ota_update.h  presence.c  presence.h  time_sync.c  time_sync.h  wifi_setup.c  wifi_setup.h
